# tidy-toc

./: .gitignore  README.md  _.code-workspace  pyproject.toml
sample/: sample_clean_select_cleaned.txt  sample_merge_page.txt  sample_merge_page_cleaned.txt  table_of_contents_OCRed.txt  table_of_contents_OCRed_cleaned.txt
scr/: Choose_from_Integers.py  Cleaner.py  Extractor.py  Filter_Lines.py  Filtering_Prompt.py  Input.py  Inputter.py  Interpreter.py  Mediator.py  Merger.py  Page_Corrector.py  Prompt.py  Selector.py  Spacer.py  Text_Line.py  Text_Lines.py  Type_Alias.py  clean_dust.py  collect_zip.py  main.py  save_text.py  tidy-toc.py
tests/cleaner/: test_cleaner.py  test_inter_cleaner.py
tests/collect_zip/: __test_collect.py
tests/extractor/: test_ext.py
tests/extractor/testcases/: pict_ufml.txt  picted_ufml.txt
tests/inputter/: conftest.py  test_apply.py  test_get.py  test_interpret.py  test_interpret_sentence.py  test_match.py  test_match_word.py  test_sentence.py  test_sentence_class.py  test_word_class.py
tests/inputter/test_case/: all.csv  digit_ok.csv  help.csv  ng.csv
tests/interpreter/: conftest.py  test_get.py  test_interpret.py  test_interpret_sentence.py  test_match_word.py
tests/interpreter/test_case/: minus_ok.csv  none.csv  pict_minus.txt  pict_mixed.txt  range_ok.csv
tests/merger/: test_merger.py
tests/merger/testcases/: pict_cand_ok.txt
tests/page/: test__page.py
tests/spacer/: test_header.py  test_spacer.py
tests/textline/: test_ptl.py  test_ptls.py  test_tl.py  test_tls.py
tests/textline/testcase/: pict_ptl_test_pat.txt  (+3 more)
